Fixing spacing

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -21,6 +21,7 @@ footer {
     left: 0;
     right: 0;
     bottom: 0;
+    padding-top: 90px;
 }
 
 .rectangle {
